// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components/Card BlankCard smoke-test 1`] = `
<kd-card type="normal"
         href
         target="_self"
         rel
>
</kd-card>
<div class="card-wrapper">
  <slot>
  </slot>
</div>
`;

exports[`Components/Card Clickable smoke-test 1`] = `
<kd-card type="clickable"
         href="https://www.kyndryl.com"
         target="_blank"
         rel="noopener"
>
  <sample-card-component>
    <div slot="title">
      This is a card title
    </div>
    <div slot="description">
      Amazon EC2 Auto Scaling ensures that your application always has the
            right amount of compute capacity by dynamically adjusting the number
            of Amazon EC2 instances based on demand.
    </div>
  </sample-card-component>
</kd-card>
<a class=" card-wrapper-clickable card-border "
   href="https://www.kyndryl.com"
   target="_blank"
   rel="noopener"
>
  <slot>
  </slot>
</a>
<div class="card-logo-container">
  <div class="card-logo">
    <img class="card-logo-img"
         src="https://fastly.picsum.photos/id/163/32/32.jpg?hmac=6Ev67xrdofIgcyzhr8G7E_OCYUUziK4DoqoH3XZ4I08"
         alt="product logo"
    >
  </div>
</div>
<h1 class="card-title">
  <slot name="title">
  </slot>
</h1>
<div class="card-subtitle">
  This is card subtitle
</div>
<div class="card-description">
  <slot name="description">
  </slot>
</div>
`;

exports[`Components/Card InsideGrid smoke-test 1`] = `
<div class="kd-grid">
  <div class="kd-grid__col--sm-2 kd-grid__col--md-4 kd-grid__col--lg-3">
    <kd-card style="width:100%;height:100%;">
      <sample-card-component>
        <div slot="title">
          This is a card title
        </div>
        <div slot="description">
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
                enim ad minim veniam, quis nostrud exercitation ullamco laboris.
        </div>
      </sample-card-component>
    </kd-card>
  </div>
  <div class="kd-grid__col--sm-2 kd-grid__col--md-4 kd-grid__col--lg-3">
    <kd-card style="width:100%;height:100%;">
      <sample-card-component>
        <div slot="title">
          This is a card title
        </div>
        <div slot="description">
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
                enim ad minim veniam, quis nostrud exercitation ullamco laboris
                nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
                in reprehenderit in voluptate velit esse cillum
        </div>
      </sample-card-component>
    </kd-card>
  </div>
  <div class="kd-grid__col--sm-2 kd-grid__col--md-4 kd-grid__col--lg-3">
    <kd-card style="width:100%;height:100%;">
      <sample-card-component>
        <div slot="title">
          This is a card title
        </div>
        <div slot="description">
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
                eiusmod tempor.
        </div>
      </sample-card-component>
    </kd-card>
  </div>
  <div class="kd-grid__col--sm-2 kd-grid__col--md-4 kd-grid__col--lg-3">
    <kd-card style="width:100%;height:100%;">
      <sample-card-component>
        <div slot="title">
          This is a card title
        </div>
        <div slot="description">
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
                enim ad minim veniam, quis nostrud exercitation ullamco laboris
                nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
                in reprehenderit in voluptate velit esse cillum dolore eu fugiat
                nulla pariatur.
        </div>
      </sample-card-component>
    </kd-card>
  </div>
</div>
<div class="card-wrapper">
  <slot>
  </slot>
</div>
<div class="card-logo-container">
  <div class="card-logo">
    <img class="card-logo-img"
         src="https://fastly.picsum.photos/id/163/32/32.jpg?hmac=6Ev67xrdofIgcyzhr8G7E_OCYUUziK4DoqoH3XZ4I08"
         alt="product logo"
    >
  </div>
</div>
<h1 class="card-title">
  <slot name="title">
  </slot>
</h1>
<div class="card-subtitle">
  This is card subtitle
</div>
<div class="card-description">
  <slot name="description">
  </slot>
</div>
<div class="card-wrapper">
  <slot>
  </slot>
</div>
<div class="card-logo-container">
  <div class="card-logo">
    <img class="card-logo-img"
         src="https://fastly.picsum.photos/id/163/32/32.jpg?hmac=6Ev67xrdofIgcyzhr8G7E_OCYUUziK4DoqoH3XZ4I08"
         alt="product logo"
    >
  </div>
</div>
<h1 class="card-title">
  <slot name="title">
  </slot>
</h1>
<div class="card-subtitle">
  This is card subtitle
</div>
<div class="card-description">
  <slot name="description">
  </slot>
</div>
<div class="card-wrapper">
  <slot>
  </slot>
</div>
<div class="card-logo-container">
  <div class="card-logo">
    <img class="card-logo-img"
         src="https://fastly.picsum.photos/id/163/32/32.jpg?hmac=6Ev67xrdofIgcyzhr8G7E_OCYUUziK4DoqoH3XZ4I08"
         alt="product logo"
    >
  </div>
</div>
<h1 class="card-title">
  <slot name="title">
  </slot>
</h1>
<div class="card-subtitle">
  This is card subtitle
</div>
<div class="card-description">
  <slot name="description">
  </slot>
</div>
<div class="card-wrapper">
  <slot>
  </slot>
</div>
<div class="card-logo-container">
  <div class="card-logo">
    <img class="card-logo-img"
         src="https://fastly.picsum.photos/id/163/32/32.jpg?hmac=6Ev67xrdofIgcyzhr8G7E_OCYUUziK4DoqoH3XZ4I08"
         alt="product logo"
    >
  </div>
</div>
<h1 class="card-title">
  <slot name="title">
  </slot>
</h1>
<div class="card-subtitle">
  This is card subtitle
</div>
<div class="card-description">
  <slot name="description">
  </slot>
</div>
`;

exports[`Components/Card Simple smoke-test 1`] = `
<kd-card type="normal"
         href
         target="_self"
         rel
>
  <sample-card-component>
    <div slot="title">
      This is a card title
    </div>
    <div slot="description">
      Amazon EC2 Auto Scaling ensures that your application always has the
            right amount of compute capacity by dynamically adjusting the number
            of Amazon EC2 instances based on demand.
    </div>
  </sample-card-component>
</kd-card>
<div class="card-wrapper">
  <slot>
  </slot>
</div>
<div class="card-logo-container">
  <div class="card-logo">
    <img class="card-logo-img"
         src="https://fastly.picsum.photos/id/163/32/32.jpg?hmac=6Ev67xrdofIgcyzhr8G7E_OCYUUziK4DoqoH3XZ4I08"
         alt="product logo"
    >
  </div>
</div>
<h1 class="card-title">
  <slot name="title">
  </slot>
</h1>
<div class="card-subtitle">
  This is card subtitle
</div>
<div class="card-description">
  <slot name="description">
  </slot>
</div>
`;
